// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RailHeader > matches snapshot with all props 1`] = `
<div>
  <div
    class="header"
  >
    <div
      class="headerText"
    >
      <h4
        class="typography title4 alignLeft widthFull colorInverse"
      >
        Top Rated
      </h4>
      <p
        class="typography body2 alignLeft widthFull colorInverse"
      >
        Hand-picked quizzes
      </p>
    </div>
    <div
      class="action"
    >
      <a
        href="/see-all"
      >
        See all
      </a>
    </div>
  </div>
</div>
`;

exports[`RailHeader > matches snapshot with title only 1`] = `
<div>
  <div
    class="header"
  >
    <div
      class="headerText"
    >
      <h4
        class="typography title4 alignLeft widthFull colorInverse"
      >
        Featured
      </h4>
    </div>
    <div
      class="action"
    />
  </div>
</div>
`;
